COMPILERS LAB/Group_Asg_3/ass5_19CS10064_19CS30008.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | FLO_CONSTANT
    3                   | INT_CONSTANT
    4                   | STRING_LITERAL
    5                   | LEFTPAR expression RIGHTPAR

    6 postfix_expression: primary_expression
    7                   | postfix_expression LEFTBRACKET expression RIGHTBRACKET
    8                   | postfix_expression LEFTPAR argument_expression_list_opt RIGHTPAR
    9                   | postfix_expression DOT IDENTIFIER
   10                   | postfix_expression ARROW IDENTIFIER
   11                   | postfix_expression INCREMENT
   12                   | postfix_expression DECREMENT
   13                   | LEFTPAR type_name RIGHTPAR LEFTBRACE initializer_list RIGHTBRACE
   14                   | LEFTPAR type_name RIGHTPAR LEFTBRACE initializer_list COMMA RIGHTBRACE

   15 argument_expression_list_opt: argument_expression_list
   16                             | ε

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list COMMA assignment_expression

   19 unary_expression: postfix_expression
   20                 | INCREMENT unary_expression
   21                 | DECREMENT unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF LEFTPAR type_name RIGHTPAR

   25 unary_operator: PLUS
   26               | MINUS
   27               | NOT
   28               | TILDA
   29               | AND
   30               | MULTIPLY

   31 cast_expression: unary_expression
   32                | LEFTPAR type_name RIGHTPAR cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression MULTIPLY cast_expression
   35                          | multiplicative_expression DIV cast_expression
   36                          | multiplicative_expression MOD cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression PLUS multiplicative_expression
   39                    | additive_expression MINUS multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFTSHIFT additive_expression
   42                 | shift_expression RIGHTSHIFT additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression LESS shift_expression
   45                      | relational_expression GREATER shift_expression
   46                      | relational_expression LESSEQUAL shift_expression
   47                      | relational_expression GREATEREQUAL shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression DOUBLEEQUAL relational_expression
   50                    | equality_expression NOTEQUAL relational_expression

   51 AND_expression: equality_expression
   52               | AND_expression AND equality_expression

   53 exclusive_OR_expression: AND_expression
   54                        | exclusive_OR_expression XOR AND_expression

   55 inclusive_OR_expression: exclusive_OR_expression
   56                        | inclusive_OR_expression OR exclusive_OR_expression

   57 logical_AND_expression: inclusive_OR_expression
   58                       | logical_AND_expression DOUBLEAND M inclusive_OR_expression

   59 logical_OR_expression: logical_AND_expression
   60                      | logical_OR_expression DOUBLEOR M logical_AND_expression

   61 conditional_expression: logical_OR_expression
   62                       | logical_OR_expression N QUESTIONMARK M expression N COLON M conditional_expression

   63 M: ε

   64 N: ε

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: EQUAL
   68                    | MULTIPLYEQUAL
   69                    | DIVEQUAL
   70                    | MODEQUAL
   71                    | PLUSEQUAL
   72                    | MINUSEQUAL
   73                    | LEFTSHIFTEQUAL
   74                    | RIGHTSHIFTEQUAL
   75                    | ANDEQUAL
   76                    | XOREQUAL
   77                    | OREQUAL

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers init_declarator_list SEMICOLON
   82            | declaration_specifiers SEMICOLON

   83 declaration_specifiers: storage_class_specifier declaration_specifiers
   84                       | storage_class_specifier
   85                       | type_specifier declaration_specifiers
   86                       | type_specifier
   87                       | type_qualifier declaration_specifiers
   88                       | type_qualifier
   89                       | function_specifier declaration_specifiers
   90                       | function_specifier

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list COMMA init_declarator

   93 init_declarator: declarator EQUAL initializer
   94                | declarator

   95 storage_class_specifier: EXTERN
   96                        | STATIC
   97                        | AUTO
   98                        | REGISTER

   99 type_specifier: VOID
  100               | CHAR
  101               | SHORT
  102               | INT
  103               | LONG
  104               | FLOAT
  105               | DOUBLE
  106               | SIGNED
  107               | UNSIGNED
  108               | BOOL
  109               | COMPLEX
  110               | IMAGINARY

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  112                         | type_qualifier specifier_qualifier_list_opt

  113 specifier_qualifier_list_opt: specifier_qualifier_list
  114                             | ε

  115 type_qualifier: CONST
  116               | RESTRICT
  117               | VOLATILE

  118 function_specifier: INLINE

  119 declarator: pointer direct_declarator
  120           | direct_declarator

  121 direct_declarator: IDENTIFIER
  122                  | LEFTPAR declarator RIGHTPAR
  123                  | direct_declarator LEFTBRACKET RIGHTBRACKET
  124                  | direct_declarator LEFTBRACKET type_qualifier_list RIGHTBRACKET
  125                  | direct_declarator LEFTBRACKET assignment_expression RIGHTBRACKET
  126                  | direct_declarator LEFTBRACKET type_qualifier_list assignment_expression RIGHTBRACKET
  127                  | direct_declarator LEFTBRACKET STATIC type_qualifier_list assignment_expression RIGHTBRACKET
  128                  | direct_declarator LEFTBRACKET STATIC assignment_expression RIGHTBRACKET
  129                  | direct_declarator LEFTBRACKET type_qualifier_list STATIC assignment_expression RIGHTBRACKET
  130                  | direct_declarator LEFTBRACKET MULTIPLY RIGHTBRACKET
  131                  | direct_declarator LEFTBRACKET type_qualifier_list MULTIPLY RIGHTBRACKET
  132                  | direct_declarator LEFTPAR change_table parameter_type_list RIGHTPAR
  133                  | direct_declarator LEFTPAR identifier_list RIGHTPAR
  134                  | direct_declarator LEFTPAR change_table RIGHTPAR

  135 type_qualifier_list_opt: type_qualifier_list
  136                        | ε

  137 pointer: MULTIPLY type_qualifier_list_opt
  138        | MULTIPLY type_qualifier_list_opt pointer

  139 type_qualifier_list: type_qualifier
  140                    | type_qualifier_list type_qualifier

  141 parameter_type_list: parameter_list
  142                    | parameter_list COMMA ELLIPSIS

  143 parameter_list: parameter_declaration
  144               | parameter_list COMMA parameter_declaration

  145 parameter_declaration: declaration_specifiers declarator
  146                      | declaration_specifiers

  147 identifier_list: IDENTIFIER
  148                | identifier_list COMMA IDENTIFIER

  149 type_name: specifier_qualifier_list

  150 initializer: assignment_expression
  151            | LEFTBRACE initializer_list RIGHTBRACE
  152            | LEFTBRACE initializer_list COMMA RIGHTBRACE

  153 initializer_list: initializer
  154                 | designation initializer
  155                 | initializer_list COMMA initializer
  156                 | initializer_list COMMA designation initializer

  157 designation: designator_list EQUAL

  158 designator_list: designator
  159                | designator_list designator

  160 designator: LEFTBRACKET constant_expression RIGHTBRACKET
  161           | DOT IDENTIFIER

  162 statement: labeled_statement
  163          | compound_statement
  164          | expression_statement
  165          | selection_statement
  166          | iteration_statement
  167          | jump_statement

  168 loop_statement: labeled_statement
  169               | expression_statement
  170               | selection_statement
  171               | iteration_statement
  172               | jump_statement

  173 labeled_statement: IDENTIFIER COLON statement
  174                  | CASE constant_expression COLON statement
  175                  | DEFAULT COLON statement

  176 compound_statement: LEFTBRACE X change_table block_item_list_opt RIGHTBRACE

  177 block_item_list_opt: block_item_list
  178                    | ε

  179 block_item_list: block_item
  180                | block_item_list M block_item

  181 block_item: declaration
  182           | statement

  183 expression_statement: SEMICOLON
  184                     | expression SEMICOLON

  185 selection_statement: IF LEFTPAR expression N RIGHTPAR M statement N
  186                    | IF LEFTPAR expression N RIGHTPAR M statement N ELSE M statement
  187                    | SWITCH LEFTPAR expression RIGHTPAR statement

  188 iteration_statement: WHILE W LEFTPAR X change_table M expression RIGHTPAR M loop_statement
  189                    | WHILE W LEFTPAR X change_table M expression RIGHTPAR LEFTBRACE M block_item_list_opt RIGHTBRACE
  190                    | DO D M loop_statement M WHILE LEFTPAR expression RIGHTPAR SEMICOLON
  191                    | DO D LEFTBRACE M block_item_list_opt RIGHTBRACE M WHILE LEFTPAR expression RIGHTPAR SEMICOLON
  192                    | FOR F LEFTPAR X change_table declaration M expression_statement M expression N RIGHTPAR M loop_statement
  193                    | FOR F LEFTPAR X change_table expression_statement M expression_statement M expression N RIGHTPAR M loop_statement
  194                    | FOR F LEFTPAR X change_table declaration M expression_statement M expression N RIGHTPAR M LEFTBRACE block_item_list_opt RIGHTBRACE
  195                    | FOR F LEFTPAR X change_table expression_statement M expression_statement M expression N RIGHTPAR M LEFTBRACE block_item_list_opt RIGHTBRACE

  196 F: ε

  197 W: ε

  198 D: ε

  199 X: ε

  200 change_table: ε

  201 jump_statement: GOTO IDENTIFIER SEMICOLON
  202               | CONTINUE SEMICOLON
  203               | BREAK SEMICOLON
  204               | RETURN SEMICOLON
  205               | RETURN expression SEMICOLON

  206 translation_unit: translation_unit external_declaration
  207                 | external_declaration

  208 external_declaration: function_definition
  209                     | declaration

  210 function_definition: declaration_specifiers declarator declaration_list_opt change_table LEFTBRACE block_item_list_opt RIGHTBRACE

  211 declaration_list_opt: declaration_list
  212                     | ε

  213 declaration_list: declaration
  214                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <syent> (258) 1 9 10 121 147 148 161 173 201
    FLO_CONSTANT <charval> (259) 2
    INT_CONSTANT <ival> (260) 3
    STRING_LITERAL <charval> (261) 4
    SIZEOF (262) 23 24
    EXTERN (263) 95
    STATIC (264) 96 127 128 129
    AUTO (265) 97
    REGISTER (266) 98
    VOID (267) 99
    CHAR (268) 100
    SHORT (269) 101
    INT (270) 102
    LONG (271) 103
    FLOAT (272) 104
    DOUBLE (273) 105
    SIGNED (274) 106
    UNSIGNED (275) 107
    BOOL (276) 108
    COMPLEX (277) 109
    IMAGINARY (278) 110
    CONST (279) 115
    RESTRICT (280) 116
    VOLATILE (281) 117
    INLINE (282) 118
    ELLIPSIS (283) 142
    CASE (284) 174
    DEFAULT (285) 175
    IF (286) 185 186
    ELSE (287) 186
    SWITCH (288) 187
    WHILE (289) 188 189 190 191
    DO (290) 190 191
    FOR (291) 192 193 194 195
    GOTO (292) 201
    CONTINUE (293) 202
    BREAK (294) 203
    RETURN (295) 204 205
    ARROW (296) 10
    INCREMENT (297) 11 20
    DECREMENT (298) 12 21
    LEFTSHIFT (299) 41
    RIGHTSHIFT (300) 42
    LESSEQUAL (301) 46
    GREATEREQUAL (302) 47
    DOUBLEEQUAL (303) 49
    NOTEQUAL (304) 50
    DOUBLEAND (305) 58
    DOUBLEOR (306) 60
    PLUSEQUAL (307) 71
    MINUSEQUAL (308) 72
    MULTIPLYEQUAL (309) 68
    DIVEQUAL (310) 69
    MODEQUAL (311) 70
    LEFTSHIFTEQUAL (312) 73
    RIGHTSHIFTEQUAL (313) 74
    ANDEQUAL (314) 75
    OREQUAL (315) 77
    XOREQUAL (316) 76
    PLUS (317) 25 38
    MINUS (318) 26 39
    MULTIPLY (319) 30 34 130 131 137 138
    DIV (320) 35
    MOD (321) 36
    TILDA (322) 28
    NOT (323) 27
    AND (324) 29 52
    EQUAL (325) 67 93 157
    SEMICOLON (326) 81 82 183 184 190 191 201 202 203 204 205
    COMMA (327) 14 18 79 92 142 144 148 152 155 156
    DOT (328) 9 161
    LESS (329) 44
    GREATER (330) 45
    OR (331) 56
    XOR (332) 54
    LOWER_THAN_ELSE (333)
    LEFTPAR (334) 5 8 13 14 24 32 122 132 133 134 185 186 187 188 189 190 191 192 193 194 195
    RIGHTPAR (335) 5 8 13 14 24 32 122 132 133 134 185 186 187 188 189 190 191 192 193 194 195
    LEFTBRACE (336) 13 14 151 152 176 189 191 194 195 210
    RIGHTBRACE (337) 13 14 151 152 176 189 191 194 195 210
    LEFTBRACKET (338) 7 123 124 125 126 127 128 129 130 131 160
    RIGHTBRACKET (339) 7 123 124 125 126 127 128 129 130 131 160
    COLON (340) 62 173 174 175
    QUESTIONMARK (341) 62


Nonterminals, with rules where they appear

    $accept (87)
        on left: 0
    primary_expression <expr> (88)
        on left: 1 2 3 4 5
        on right: 6
    postfix_expression <arr> (89)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 7 8 9 10 11 12 19
    argument_expression_list_opt <numparams> (90)
        on left: 15 16
        on right: 8
    argument_expression_list <numparams> (91)
        on left: 17 18
        on right: 15 18
    unary_expression <arr> (92)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 66
    unary_operator <unary_op> (93)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression <arr> (94)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression <expr> (95)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression <expr> (96)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression <expr> (97)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression <expr> (98)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression <expr> (99)
        on left: 48 49 50
        on right: 49 50 51 52
    AND_expression <expr> (100)
        on left: 51 52
        on right: 52 53 54
    exclusive_OR_expression <expr> (101)
        on left: 53 54
        on right: 54 55 56
    inclusive_OR_expression <expr> (102)
        on left: 55 56
        on right: 56 57 58
    logical_AND_expression <expr> (103)
        on left: 57 58
        on right: 58 59 60
    logical_OR_expression <expr> (104)
        on left: 59 60
        on right: 60 61 62
    conditional_expression <expr> (105)
        on left: 61 62
        on right: 62 65 80
    M <instruction> (106)
        on left: 63
        on right: 58 60 62 180 185 186 188 189 190 191 192 193 194 195
    N <stmt> (107)
        on left: 64
        on right: 62 185 186 192 193 194 195
    assignment_expression <expr> (108)
        on left: 65 66
        on right: 17 18 66 78 79 125 126 127 128 129 150
    assignment_operator (109)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression <expr> (110)
        on left: 78 79
        on right: 5 7 62 79 184 185 186 187 188 189 190 191 192 193 194 195 205
    constant_expression (111)
        on left: 80
        on right: 160 174
    declaration (112)
        on left: 81 82
        on right: 181 192 194 209 213 214
    declaration_specifiers (113)
        on left: 83 84 85 86 87 88 89 90
        on right: 81 82 83 85 87 89 145 146 210
    init_declarator_list (114)
        on left: 91 92
        on right: 81 92
    init_declarator <syent> (115)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (116)
        on left: 95 96 97 98
        on right: 83 84
    type_specifier (117)
        on left: 99 100 101 102 103 104 105 106 107 108 109 110
        on right: 85 86 111
    specifier_qualifier_list (118)
        on left: 111 112
        on right: 113 149
    specifier_qualifier_list_opt (119)
        on left: 113 114
        on right: 111 112
    type_qualifier (120)
        on left: 115 116 117
        on right: 87 88 112 139 140
    function_specifier (121)
        on left: 118
        on right: 89 90
    declarator <syent> (122)
        on left: 119 120
        on right: 93 94 122 145 210
    direct_declarator <syent> (123)
        on left: 121 122 123 124 125 126 127 128 129 130 131 132 133 134
        on right: 119 120 123 124 125 126 127 128 129 130 131 132 133 134
    type_qualifier_list_opt (124)
        on left: 135 136
        on right: 137 138
    pointer <syenttype> (125)
        on left: 137 138
        on right: 119 138
    type_qualifier_list (126)
        on left: 139 140
        on right: 124 126 127 129 131 135 140
    parameter_type_list (127)
        on left: 141 142
        on right: 132
    parameter_list (128)
        on left: 143 144
        on right: 141 142 144
    parameter_declaration (129)
        on left: 145 146
        on right: 143 144
    identifier_list (130)
        on left: 147 148
        on right: 133 148
    type_name (131)
        on left: 149
        on right: 13 14 24 32
    initializer <syent> (132)
        on left: 150 151 152
        on right: 93 153 154 155 156
    initializer_list (133)
        on left: 153 154 155 156
        on right: 13 14 151 152 155 156
    designation (134)
        on left: 157
        on right: 154 156
    designator_list (135)
        on left: 158 159
        on right: 157 159
    designator (136)
        on left: 160 161
        on right: 158 159
    statement <stmt> (137)
        on left: 162 163 164 165 166 167
        on right: 173 174 175 182 185 186 187
    loop_statement <stmt> (138)
        on left: 168 169 170 171 172
        on right: 188 190 192 193
    labeled_statement <stmt> (139)
        on left: 173 174 175
        on right: 162 168
    compound_statement <stmt> (140)
        on left: 176
        on right: 163
    block_item_list_opt <stmt> (141)
        on left: 177 178
        on right: 176 189 191 194 195 210
    block_item_list <stmt> (142)
        on left: 179 180
        on right: 177 180
    block_item <stmt> (143)
        on left: 181 182
        on right: 179 180
    expression_statement <expr> (144)
        on left: 183 184
        on right: 164 169 192 193 194 195
    selection_statement <stmt> (145)
        on left: 185 186 187
        on right: 165 170
    iteration_statement <stmt> (146)
        on left: 188 189 190 191 192 193 194 195
        on right: 166 171
    F (147)
        on left: 196
        on right: 192 193 194 195
    W (148)
        on left: 197
        on right: 188 189
    D (149)
        on left: 198
        on right: 190 191
    X (150)
        on left: 199
        on right: 176 188 189 192 193 194 195
    change_table (151)
        on left: 200
        on right: 132 134 176 188 189 192 193 194 195 210
    jump_statement <stmt> (152)
        on left: 201 202 203 204 205
        on right: 167 172
    translation_unit (153)
        on left: 206 207
        on right: 0 206
    external_declaration (154)
        on left: 208 209
        on right: 206 207
    function_definition (155)
        on left: 210
        on right: 208
    declaration_list_opt (156)
        on left: 211 212
        on right: 210
    declaration_list (157)
        on left: 213 214
        on right: 211 214


State 0

    0 $accept: • translation_unit $end

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20

    declaration              go to state 21
    declaration_specifiers   go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    translation_unit         go to state 27
    external_declaration     go to state 28
    function_definition      go to state 29


State 1

   95 storage_class_specifier: EXTERN •

    $default  reduce using rule 95 (storage_class_specifier)


State 2

   96 storage_class_specifier: STATIC •

    $default  reduce using rule 96 (storage_class_specifier)


State 3

   97 storage_class_specifier: AUTO •

    $default  reduce using rule 97 (storage_class_specifier)


State 4

   98 storage_class_specifier: REGISTER •

    $default  reduce using rule 98 (storage_class_specifier)


State 5

   99 type_specifier: VOID •

    $default  reduce using rule 99 (type_specifier)


State 6

  100 type_specifier: CHAR •

    $default  reduce using rule 100 (type_specifier)


State 7

  101 type_specifier: SHORT •

    $default  reduce using rule 101 (type_specifier)


State 8

  102 type_specifier: INT •

    $default  reduce using rule 102 (type_specifier)


State 9

  103 type_specifier: LONG •

    $default  reduce using rule 103 (type_specifier)


State 10

  104 type_specifier: FLOAT •

    $default  reduce using rule 104 (type_specifier)


State 11

  105 type_specifier: DOUBLE •

    $default  reduce using rule 105 (type_specifier)


State 12

  106 type_specifier: SIGNED •

    $default  reduce using rule 106 (type_specifier)


State 13

  107 type_specifier: UNSIGNED •

    $default  reduce using rule 107 (type_specifier)


State 14

  108 type_specifier: BOOL •

    $default  reduce using rule 108 (type_specifier)


State 15

  109 type_specifier: COMPLEX •

    $default  reduce using rule 109 (type_specifier)


State 16

  110 type_specifier: IMAGINARY •

    $default  reduce using rule 110 (type_specifier)


State 17

  115 type_qualifier: CONST •

    $default  reduce using rule 115 (type_qualifier)


State 18

  116 type_qualifier: RESTRICT •

    $default  reduce using rule 116 (type_qualifier)


State 19

  117 type_qualifier: VOLATILE •

    $default  reduce using rule 117 (type_qualifier)


State 20

  118 function_specifier: INLINE •

    $default  reduce using rule 118 (function_specifier)


State 21

  209 external_declaration: declaration •

    $default  reduce using rule 209 (external_declaration)


State 22

   81 declaration: declaration_specifiers • init_declarator_list SEMICOLON
   82            | declaration_specifiers • SEMICOLON
  210 function_definition: declaration_specifiers • declarator declaration_list_opt change_table LEFTBRACE block_item_list_opt RIGHTBRACE

    IDENTIFIER  shift, and go to state 30
    MULTIPLY    shift, and go to state 31
    SEMICOLON   shift, and go to state 32
    LEFTPAR     shift, and go to state 33

    init_declarator_list  go to state 34
    init_declarator       go to state 35
    declarator            go to state 36
    direct_declarator     go to state 37
    pointer               go to state 38


State 23

   83 declaration_specifiers: storage_class_specifier • declaration_specifiers
   84                       | storage_class_specifier •

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 39
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 24

   85 declaration_specifiers: type_specifier • declaration_specifiers
   86                       | type_specifier •

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 40
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 25

   87 declaration_specifiers: type_qualifier • declaration_specifiers
   88                       | type_qualifier •

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 41
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 26

   89 declaration_specifiers: function_specifier • declaration_specifiers
   90                       | function_specifier •

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20

    $default  reduce using rule 90 (declaration_specifiers)

    declaration_specifiers   go to state 42
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26


State 27

    0 $accept: translation_unit • $end
  206 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 43
    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20

    declaration              go to state 21
    declaration_specifiers   go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    external_declaration     go to state 44
    function_definition      go to state 29


State 28

  207 translation_unit: external_declaration •

    $default  reduce using rule 207 (translation_unit)


State 29

  208 external_declaration: function_definition •

    $default  reduce using rule 208 (external_declaration)


State 30

  121 direct_declarator: IDENTIFIER •

    $default  reduce using rule 121 (direct_declarator)


State 31

  137 pointer: MULTIPLY • type_qualifier_list_opt
  138        | MULTIPLY • type_qualifier_list_opt pointer

    CONST     shift, and go to state 17
    RESTRICT  shift, and go to state 18
    VOLATILE  shift, and go to state 19

    $default  reduce using rule 136 (type_qualifier_list_opt)

    type_qualifier           go to state 45
    type_qualifier_list_opt  go to state 46
    type_qualifier_list      go to state 47


State 32

   82 declaration: declaration_specifiers SEMICOLON •

    $default  reduce using rule 82 (declaration)


State 33

  122 direct_declarator: LEFTPAR • declarator RIGHTPAR

    IDENTIFIER  shift, and go to state 30
    MULTIPLY    shift, and go to state 31
    LEFTPAR     shift, and go to state 33

    declarator         go to state 48
    direct_declarator  go to state 37
    pointer            go to state 38


State 34

   81 declaration: declaration_specifiers init_declarator_list • SEMICOLON
   92 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 49
    COMMA      shift, and go to state 50


State 35

   91 init_declarator_list: init_declarator •

    $default  reduce using rule 91 (init_declarator_list)


State 36

   93 init_declarator: declarator • EQUAL initializer
   94                | declarator •
  210 function_definition: declaration_specifiers declarator • declaration_list_opt change_table LEFTBRACE block_item_list_opt RIGHTBRACE

    EXTERN     shift, and go to state 1
    STATIC     shift, and go to state 2
    AUTO       shift, and go to state 3
    REGISTER   shift, and go to state 4
    VOID       shift, and go to state 5
    CHAR       shift, and go to state 6
    SHORT      shift, and go to state 7
    INT        shift, and go to state 8
    LONG       shift, and go to state 9
    FLOAT      shift, and go to state 10
    DOUBLE     shift, and go to state 11
    SIGNED     shift, and go to state 12
    UNSIGNED   shift, and go to state 13
    BOOL       shift, and go to state 14
    COMPLEX    shift, and go to state 15
    IMAGINARY  shift, and go to state 16
    CONST      shift, and go to state 17
    RESTRICT   shift, and go to state 18
    VOLATILE   shift, and go to state 19
    INLINE     shift, and go to state 20
    EQUAL      shift, and go to state 51

    LEFTBRACE  reduce using rule 212 (declaration_list_opt)
    $default   reduce using rule 94 (init_declarator)

    declaration              go to state 52
    declaration_specifiers   go to state 53
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    type_qualifier           go to state 25
    function_specifier       go to state 26
    declaration_list_opt     go to state 54
    declaration_list         go to state 55


State 37

  120 declarator: direct_declarator •
  123 direct_declarator: direct_declarator • LEFTBRACKET RIGHTBRACKET
  124                  | direct_declarator • LEFTBRACKET type_qualifier_list RIGHTBRACKET
  125                  | direct_declarator • LEFTBRACKET assignment_expression RIGHTBRACKET
  126                  | direct_declarator • LEFTBRACKET type_qualifier_list assignment_expression RIGHTBRACKET
  127                  | direct_declarator • LEFTBRACKET STATIC type_qualifier_list assignment_expression RIGHTBRACKET
  128                  | direct_declarator • LEFTBRACKET STATIC assignment_expression RIGHTBRACKET
  129                  | direct_declarator • LEFTBRACKET type_qualifier_list STATIC assignment_expression RIGHTBRACKET
  130                  | direct_declarator • LEFTBRACKET MULTIPLY RIGHTBRACKET
  131                  | direct_declarator • LEFTBRACKET type_qualifier_list MULTIPLY RIGHTBRACKET
  132                  | direct_declarator • LEFTPAR change_table parameter_type_list RIGHTPAR
  133                  | direct_declarator • LEFTPAR identifier_list RIGHTPAR
  134                  | direct_declarator • LEFTPAR change_table RIGHTPAR

    LEFTPAR      shift, and go to state 56
    LEFTBRACKET  shift, and go to state 57

    $default  reduce using rule 120 (declarator)


State 38

  119 declarator: pointer • direct_declarator

    IDENTIFIER  shift, and go to state 30
    LEFTPAR     shift, and go to state 33

    direct_declarator  go to state 58


State 39

   83 declaration_specifiers: storage_class_specifier declaration_specifiers •

    $default  reduce using rule 83 (declaration_specifiers)


State 40

   85 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 85 (declaration_specifiers)


State 41

   87 declaration_specifiers: type_qualifier declaration_specifiers •

    $default  reduce using rule 87 (declaration_specifiers)


State 42

   89 declaration_specifiers: function_specifier declaration_specifiers •

    $default  reduce using rule 89 (declaration_specifiers)


State 43

    0 $accept: translation_unit $end •

    $default  accept


State 44

  206 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 206 (translation_unit)


State 45

  139 type_qualifier_list: type_qualifier •

    $default  reduce using rule 139 (type_qualifier_list)


State 46

  137 pointer: MULTIPLY type_qualifier_list_opt •
  138        | MULTIPLY type_qualifier_list_opt • pointer

    MULTIPLY  shift, and go to state 31
